fixes #1117